<resources>
  <string name="app_name">CareemApp</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="vote_count">votes : %1$d</string>
  <string name="popularity_count">popularity : %1$d</string>
  <string name="sort_by_label">SORT BY</string>
  <string name="filter_by_label">FILTER</string>
  <string name="reset_label">RESET</string>
  <string name="confirm_label">CONFIRM</string>
  <string name="release_date_desc">Release Date By Desc</string>
  <string name="release_date_asc">Release Date Asc</string>
  <string name="release_date_lte">Release Date LTE</string>
  <string name="release_date_hint">yyyy-mm-dd</string>
  <string name="release_date_gte">Release Date Gte</string>
  <string name="movie_detail_title">Title</string>
  <string name="release_date_val">%1$d-%2$d-%3$d</string>
  <string name="error_msg_date_validate">releaseDateGte should be greater than releaseDateLte</string>
  <string name="release_date">Release Date %1$s</string>
  <string name="revenue">Revenue %1$d</string>
</resources>
