<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="@color/finestWhite"
  tools:context=".FilterFragment">

  <Button
    android:id="@+id/reset_btn"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/reset_label"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/confirm_btn"
    />

  <Button
    android:id="@+id/confirm_btn"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/confirm_label"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toEndOf="@id/reset_btn"
    app:layout_constraintEnd_toEndOf="parent"
    />

  <TextView
    android:id="@+id/sort_by_label"
    android:layout_width="100dp"
    android:layout_height="100dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:gravity="center"
    android:text="@string/sort_by_label"
    android:textStyle="bold"
    android:textSize="16sp"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/grey_hex_df"
    />

  <View
    android:layout_width="100dp"
    android:layout_height="1dp"
    android:background="@color/grey_hex_0a"
    app:layout_constraintTop_toBottomOf="@id/sort_by_label"
    />

  <TextView
    android:id="@+id/filter_by_label"
    android:layout_width="100dp"
    android:layout_height="100dp"
    app:layout_constraintTop_toBottomOf="@id/sort_by_label"
    app:layout_constraintStart_toStartOf="parent"
    android:gravity="center"
    android:text="@string/filter_by_label"
    android:layout_marginTop="1dp"
    android:textStyle="bold"
    android:textSize="16sp"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/grey_hex_df"
    />

  <FrameLayout
    android:id="@+id/filter_content"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toEndOf="@id/sort_by_label"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="4dp"
    />

</android.support.constraint.ConstraintLayout>