<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <TextView
    android:id="@+id/releaseDateLte"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/release_date_hint"
    style="@style/TextAppearance.AppCompat.Title"
    app:layout_constraintEnd_toEndOf="parent"
    android:gravity="end"
    android:layout_marginEnd="10dp"
    />

  <TextView
    android:id="@+id/releaseDateLteLabel"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/release_date_lte"
    style="@style/TextAppearance.AppCompat.Body2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBaseline_toBaselineOf="@id/releaseDateLte"
    />


  <TextView
    android:id="@+id/releaseDateGte"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/release_date_hint"
    style="@style/TextAppearance.AppCompat.Title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/releaseDateLte"
    android:layout_marginTop="10dp"
    android:gravity="end"
    android:layout_marginEnd="10dp"
    />

  <TextView
    android:id="@+id/releaseDateGteLabel"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/release_date_gte"
    style="@style/TextAppearance.AppCompat.Body2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/releaseDateLteLabel"
    android:layout_marginTop="10dp"
    app:layout_constraintBaseline_toBaselineOf="@id/releaseDateGte"
    />

</android.support.constraint.ConstraintLayout>